# autonomous-bot

./: README.md
raido-bot_description/: CMakeLists.txt  package.xml
raido-bot_description/blender/: raido_bot.blend  raido_bot.blend1  raido_bot_wheel.blend
raido-bot_description/launch/: raido-bot.launch.py
raido-bot_description/meshes/: base_link.stl  wheel_link.stl
raido-bot_description/rviz/: config.yaml.rviz
raido-bot_description/src/: RaidoDrive.cpp
raido-bot_description/urdf/: raido-bot.urdf  raido-bot.urdf.xacro
raido-bot_description/worlds/: my_world.sdf
